--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,7 +12,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Rivers</a>
+            <a href="#">Page 2</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contacus.html">Contac Us</a>
         </nav>
