--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Risk Rafting Boating | Home</title>
+    <title>Whitewater Rafting Vacations | Risky Rafting Boating | Home</title>
 </head>
 <body>
     <header>
-        <a id="riskrafting_link" href="index.html">
-            <img class="riskrafting" src="images/riskrafting.png" alt="Risk Rafting Logo">
+        <a id="riskyrafting_link" href="index.html">
+            <img class="riskyrafting" src="images/riskrafting.png" alt="Risky Rafting Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -22,7 +22,7 @@
     </div>
     <section id="hero-msg">
         <h1 class="home-title">Have An Adventure</h1>
-        <h4>Make Memories with Risk Rafting </h4>
+        <h4>Make Memories with Risky Rafting </h4>
         <div class='button-box'>
             <a class='book' href="contactus.html">Book Now</a>
         </div>
@@ -46,12 +46,12 @@
     <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
         <h2> More Than Just The Thrill</h2>
-        <p>Enjoy the breathtaking scenary. From valleys meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors </p>
+        <p>Enjoy the breathtaking scenary. From valleys meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
         <a class='join' href="rivers.html">Join Us</a>
     </section>
 </main>
 <footer>
-    <p>Risk Rafting &copy; 2023 - Rivera</p>
+    <p>Risky Rafting &copy; 2023 - Rivera</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
