Layout the Home Page w7

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -20,15 +20,17 @@
         </nav>
     </header>
     <div id="hero">
-        <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
-    </div>
-    <section id="hero-msg">
-        <h1 class="home-title">Have An Adventure</h1>
-        <h4>Make Memories with Risky Rafting </h4>
-        <div class='button-box'>
-            <a class='book' href="contactus.html">Book Now</a>
+        <div id="hero-box">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
-    </section>  
+        <section id="hero-msg">
+            <h1 class="home-title">Have An Adventure</h1>
+            <h4>Make Memories with Risky Rafting </h4>
+            <div class='button-box'>
+                <a class='book' href="contactus.html">Book Now</a>
+            </div>
+        </section>  
+    </div>
 <main class="home-grid">
     <section class="rivers-card">
         <img class="card-img" src="images/rivers.jpg" alt="river in forest">
@@ -54,7 +56,7 @@
     </section>
 </main>
 <footer>
-    <p>Risky Rafting &copy; 2023 - Rivera</p>
+    <p>Risky Rafting &copy; 2023 - Gabriela Rivera</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
