--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Services</a>
+        <a href="#">About Us</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Services<!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          About Us  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,82 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Visitors will come to our site seeking effective and tailored solutions to enhance the IT management 
+        of their small businesses. They expect clear answers to questions such as how to optimize their systems,
+        what to do if their business software becomes sluggish, and how to maintain data security. </p>
+        <p>  
+        The necessary information to complete these actions will include details on features, system requirements, 
+        and technical support options. The preference for our site over others will be based on accessibility to accurate and relevant
+        information, a user-friendly interface, and the assurance of specific solutions tailored to the unique needs of small businesses.
       </p>
+      <p>
+        The Home Page serves as the vibrant gateway to a world of tailored solutions for small businesses. 
+        As visitors land on this dynamic hub, they can expect to discover a curated blend of innovative software offerings, 
+        each meticulously designed to address the unique challenges faced by small enterprises. 
+        From intuitive navigation to engaging visuals, the Home Page is crafted to captivate visitors, 
+        inviting them to explore the diverse array of tools and resources that await. 
+        Whether seeking to streamline operations, boost efficiency, or stay ahead of industry trends, 
+        the Home Page beckons entrepreneurs to embark on a journey of empowerment and growth.</p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/homepage2.jpg" alt="image for homepage">
+        <img src="images/homepage3.jpg" alt="image for homepage 2">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Services</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Transition from the homepage to our services page, where you'll discover precisely tailored solutions designed to elevate your business. 
+        From industry-specific software recommendations to seamless implementation strategies and scalable options, 
+        we position ourselves as your dedicated partner in small business empowerment. 
+        Learn firsthand how our expertise and innovative solutions can not only meet but exceed your business needs, 
+        driving you toward new heights of success.
       </p>
+      <p>Here you will find answers to questions like:</p>
+      
+      <li>What types of services do you offer for small businesses?</li>
+      <li>How can I determine which service is most suitable for my business?</li>
+      <li>Do you offer customized services or standard packages?</li>
+      <li>What is the implementation process for your services in my business?</li>
+      <li>What are the costs associated with hiring your services?</li>
+
+      <p>In the Services section, visitors delve into a realm of tailored solutions that transcend conventional offerings. 
+        Here, a comprehensive spectrum of services awaits, from personalized consultations to seamless implementation strategies. 
+        Entrepreneurs can anticipate finding answers to pivotal questions about the diverse range of services available, 
+        the customization options offered, and the meticulous process of implementation. 
+        The Services Page is a compass guiding businesses to the precise solutions that align with their goals, 
+        promising a transformative partnership that goes beyond standard packages, adapting to the unique contours of each enterprise.</p>
+
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/services.jpg" alt="image for page services">
+        <img src="images/services2.jpg" alt="image for page services 2">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>About Us</h3>
       <p>
-        [Written copy for the Page 3 here]
+        On our "About Us" page, delve into the essence of Strategia Site Plan, your dedicated ally in the small business landscape. 
+        Our mission extends beyond providing mere tools; we aim to cultivate a community committed to your success. 
+        Here, you'll explore the core values that drive our approach, the expertise that underlines our offerings, 
+        and the collaborative spirit that defines our relationship with every entrepreneur we serve.
+        This is a space where innovation intersects with seasoned expertise, 
+        and where your success is not just a goal but a shared journey. 
+      </p> 
+
+      <p>Here you will find answers to questions like:</p>
+      
+      <li>Who is Strategia and what do you do?</li>
+      <li>What sets Strategia apart from other companies in your industry?</li>
+      <li>How did Strategia start?</li>
+      <li>What values guide Strategia's business practices?</li>
+      <li>Who is the team behind Strategia?</li>
+
+      <p> 
+        Now to be welcome to Strategia Site Plan where questions find answers, support meets innovation,
+        and success is a collaborative adventure that we embark on together. 
+        Your journey toward small business success starts here, 
+        with a community that not only believes in your potential but actively works to empower it.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/about us.jpg" alt="image for about us page">
+        <img src="images/aboutus1.jpg" alt="image for about us page 2">
 
       </ul>
       <hr>
