--- a/personalsite/site-plan.html
+++ b/personalsite/site-plan.html
@@ -62,7 +62,7 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: New Rocker <!-- change this -->
+        Heading Font: New Tegomin <!-- change this -->
       </h4>
       <h4>
         Paragraph Font: Roboto Condensed  <!-- change this -->
@@ -212,21 +212,24 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        It features the company, as well as a brief summary of its services and products
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage.jpeg" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Services</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The image is designed to be simple and easy to understand. 
+        The elements are organized clearly and concisely. 
+        Using contrasting colors and fonts helps draw attention to important elements.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/services.jpeg" alt="services wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>About Us</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        A strategy services website with a logo,
+        a navigation menu, a list of services, and a summary paragraph about who we are and our location.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/aboutus.png" alt="about us wireframe">
     </main>
   </body>
 
