--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -29,7 +29,7 @@
                  <p>This is a place to answer frequently asked client questions.</p>
             </div>
         </section>
-        <div class="aboutus-grid">
+        <div class="about-question">
             <section class="question">
                 <h3>Is this a good trip for kids? What are the age ranges you allow?</h3>
                 <p>Absolutely this is a good trip for children of all ages. We have found however that children over the age of 8 seem to enjoy it more overall 
