Week 10 Personal Website

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -10,12 +10,12 @@
     <div id="content">
     <header>
         <a id="logo_link" href="index.html">
-            <img class="Logo" src="images/logops.png" alt="Risky Rafting Logo">
+            <img class="Logo" src="images/logops.png" alt="Logo img">
         </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Services</a>
-                <a href="#">About Us</a>
+                <a href="services.html">Services</a>
+                <a href="aboutus.html">About Us</a>
             </nav>
         </header>
         
