--- a/personalsite/aboutus.html
+++ b/personalsite/aboutus.html
@@ -50,6 +50,7 @@
         </div>
         <footer>
             <p>Strategia &copy; 2023- Gabriela Rivera</p>
+            <p><a href="site-plan.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
