--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -38,6 +38,7 @@
         </section>
         <footer>
             <p>Strategia &copy; 2023- Gabriela Rivera</p>
+            <p><a href="site-plan.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
