--- a/personalsite/services.html
+++ b/personalsite/services.html
@@ -23,18 +23,21 @@
                  <div class="services-list">
                      <div>
                             <h1> SOFTWARE SERVICES</h1>
-                            <li> Electronic billing </li>
-                            <li> Mobile application development </li>
-                            <li> Software Consulting </li>
-                            <li> Software Implementation</li>
-                            <li> System integration </li>  
-                            <li> Prototype Development </li>
-                            <li> Analisys of requirements </li>
-                            <li> Agile Development </li>
-                            <li> Cloud Services </li>
-                            <li> Software Security  </li>  
-                            <li> Software Audit </li>
-                            <li> Software Customization </li>
+                            <ul>
+                                <li> Electronic billing </li>
+                                <li> Mobile application development </li>
+                                <li> Software Consulting </li>
+                                <li> Software Implementation</li>
+                                <li> System integration </li>  
+                                <li> Prototype Development </li>
+                                <li> Analisys of requirements </li>
+                                <li> Agile Development </li>
+                                <li> Cloud Services </li>
+                                <li> Software Security  </li>  
+                                <li> Software Audit </li>
+                                <li> Software Customization </li>
+                            </ul>
+                            
                         </div>   
                         <div class="services-img">
                             <img src="images/servicesPS.jpg" alt="services img" >
@@ -44,6 +47,7 @@
         </section>
         <footer>
             <p>Strategia &copy; 2023- Gabriela Rivera</p>
+            <p><a href="site-plan.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
