--- a/Web Component/products.html
+++ b/Web Component/products.html
@@ -45,7 +45,7 @@
                     <p class="price">$20.50</p>
                     <p>This pizza to share is the ideal choice for a tasty evening with friends or family.
                         Order now and immerse yourself in the 
-                        indulgence of classic flavors that everyone will love</p>
+                        indulgence of classic flavors that everyone will love.</p>
                     <p><button>Add to Cart</button></p>
                 </div>
             </div>
