--- a/Web Component/products.html
+++ b/Web Component/products.html
@@ -51,7 +51,7 @@
             </div>
         </section>
         <footer>
-            <p> SANTELA-PIZZA &copy; 2023- Todos los derechos reservados</p>
+            <p> SANTELA-PIZZA &copy; 2023- All rights reserved</p>
 
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
