Service Subpage Week 12

--- a/personalsite/services.html
+++ b/personalsite/services.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Services</title>
 </head>
 <body>
@@ -13,9 +14,9 @@
             <img class="Logo" src="images/logops.png" alt="Risky Rafting Logo">
         </a>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="services.html">Services</a>
-                <a href="aboutus.html">About Us</a>
+                <a href="index.html"><i class='bx bxs-home-smile bx-tada' ></i> Home</a>
+                <a href="services.html"><i class='bx bx-cart-download bx-tada' ></i> Services</a>
+                <a href="aboutus.html"><i class='bx bx-expand-horizontal bx-tada' ></i> About Us</a>
             </nav>
         </header>
         <section>
